--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1"
   },
   "name": "static-website-nodejs",
   "version": "1.0.0",
   "main": "static_website.js",
-  "devDependencies": {},
   "scripts": {
-    "start":"node static_website.js",
+    "start": "node static_website.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
